# polymarket-bot

./: .env.example  .gitignore  pyproject.toml  run_persistent.sh
.streamlit/: config.toml
config/: default.yaml
data/: calibration_table.json  cycles.jsonl  results.jsonl
docs/plans/: btc-5min.md  signal-improvements-2026-04-27.md
docs/plans/archive/: smart-money-trailing.md
scripts/: backfill_slot_history.py  build_calibration.py  install_cli.sh  smart_wallets_weekly.ps1
src/polybot/: bot.py  main.py
src/polybot/account/: balance.py
src/polybot/auth/: wallet.py
src/polybot/backtest/: harness.py
src/polybot/client/: clob.py  gamma.py  goldsky.py  v2_order.py
src/polybot/dashboard/: app.py  data_loader.py
src/polybot/engine/: discovery.py  lifecycle.py  scheduler.py
src/polybot/execution/: entry.py  exit.py  order_manager.py  redeem.py  retry.py  sizing.py
src/polybot/feeds/: binance_futures.py  btc_price.py  chainlink.py  macro.py  orderbook_ws.py  spot_price.py
src/polybot/models/: asset.py  btc_market.py  market.py  types.py
src/polybot/monitoring/: alerting.py  event_log.py  logger.py  tracker.py
src/polybot/safety/: risk_manager.py
strategies/: my_strategy.py  smart_money.py
tests/: test_binance_futures.py  test_calibration.py  test_chainlink.py  test_combiner.py  test_divergence.py  test_event_log.py  test_imbalance.py  test_lifecycle.py  test_macro.py  test_sizing.py
tests/smart_wallets/: fixture_activity.json  test_api.py  test_metrics.py  test_monthly.py  test_pipeline.py  test_strategy_load.py  test_sybil.py
(+29 files in other folders)
