[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.18.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "httpx>=0.27",
    "requests>=2.31",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.31",
    "streamlit-autorefresh>=1.0",
    "pandas>=2.0",
]

[project.scripts]
polybot = "polybot.main:app"

[tool.setuptools.packages.find]
where = ["src"]
